--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -12,19 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.1",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
-    "@swimlane/ngx-datatable": "^17.0.0",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@swimlane/ngx-datatable": "^17.0.0",
     "bootstrap": "^4.1.1",
     "error-stack-parser": "^2.0.2",
     "file-saver": "^2.0.0",
@@ -36,7 +35,10 @@
     "ngx-loading": "^3.0.1",
     "ngx-toastr": "^9.1.1",
     "popper.js": "^1.14.3",
-    "rxjs-compat": "^6.2.1"
+    "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.2.1",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
