--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -13,14 +13,13 @@
   "dependencies": {
     "@angular/animations": "~9.1.1",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
-    "@angular/core": "~9.1.1",
+    "@angular/core": "~9.1.11",
     "@angular/forms": "~9.1.1",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.1",
-    "@angular/platform-browser-dynamic": "~9.1.1",
-    "@angular/router": "~9.1.1",
+    "@angular/platform-browser": "~9.1.11",
+    "@angular/platform-browser-dynamic": "~9.1.11",
+    "@angular/router": "~9.1.11",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-datatable": "^17.0.0",
@@ -31,23 +30,24 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "material-design-icons-iconfont": "^4.0.4",
-    "ngx-bootstrap": "^3.0.0",
-    "ngx-loading": "^3.0.1",
-    "ngx-toastr": "^9.1.1",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-loading": "^8.0.0",
+    "ngx-toastr": "^7.1.0",
     "popper.js": "^1.14.3",
-    "rxjs": "~6.5.4",
+    "rxjs": "~6.5.5",
     "rxjs-compat": "^6.2.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/cli": "~9.1.1",
+    "@angular/cli": "^9.1.8",
+    "@angular/common": "^8.0.0",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -59,6 +59,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "xxxxx": "^1.0.3"
   }
 }
